# afp

./: .gitignore  CMakeLists.txt  Makefile
include/afp/: finder_info.h  resource_fork.h
src/: finder_info.cpp  remap_os_error.c  resource_fork.cpp
